src/objects/ChatterRobotFeed__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>feeds to be posted automatically by code</description>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Chatter Robot Feed</label>
</CustomObject>